--- a/BrowserGame(courseSimbirSoft)/BrowserGame(courseSimbirSoft).csproj
+++ b/BrowserGame(courseSimbirSoft)/BrowserGame(courseSimbirSoft).csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj" />
+    <ProjectReference Include="..\DataLogicLayer\DataLogicLayer.csproj" />
+  </ItemGroup>
+
 </Project>
